# scientific-literature-intelligence

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
database/: advanced_queries.sql  db_manager.py  sample_data_generator.py  schema.sql
src/: __init__.py  config.py
